--- a/config.properties
+++ b/config.properties
@@ -1,9 +1,8 @@
-WAIT_MILIS = 500
 SLASH = \\
 BOOK_NAME = lesmiserables
 EXPORT = c:\\Users\\Lesa\\Documents\\fav\\PGS_SEM\\export\\ 
-%
-SEM_PMAN = 5000
-SEM_CMAN = 5000
-SEM_BMAN = 500
-SEM_VMAN = 500
+% limits for semaphores
+POOL_PMAN = 5
+POOL_CMAN = 5
+POOL_BMAN = 5
+POOL_VMAN = 5
